--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "url": "https://github.com/mateussmeneses/teste-ebac-ui/issues"
   },
   "homepage": "https://github.com/mateussmeneses/teste-ebac-ui#readme",
-  "devDependencies": {
-    "cypress": "^12.1.0"
+  "dependencies": {
+    "cypress": "^12.2.0",
+    "faker": "npm:Faker@^0.7.2",
+    "Faker": "^0.7.2",
+    "faker-br": "^0.4.1"
   }
 }
